# fully-local-deep-research-agent

./: .env.example  .gitignore  README.md  pyproject.toml  report.md
examples/: programmatic.py
src/local_deep_research/: __init__.py  __main__.py  agent.py  cli.py  config.py  firecrawl_client.py  llm.py  prompts.py  report.py  server.py  tools.py
